Gnome-Shell: Fix calendar legibility caused by em margins

--- a/src/sass/gnome-shell/_common-tweaks.scss
+++ b/src/sass/gnome-shell/_common-tweaks.scss
@@ -60,7 +60,7 @@ $dialog_box_shadow: 0 2px 6px -2px transparentize(black, .8);
 
 /* Popovers/Menus */
 .popup-menu-boxpointer {
-  -arrow-rise: if($full-panel == 'true', .6em, .8em);
+  -arrow-rise: if($full-panel == 'true', 8px, 10px);
 }
 
 .popup-menu-content {
@@ -180,7 +180,7 @@ $dialog_box_shadow: 0 2px 6px -2px transparentize(black, .8);
 
 /* Top Bar */
 #panelBox {
-    padding: if($full-panel == 'true', 0, .35em .9em);
+    padding: if($full-panel == 'true', 0, 5px 12px);
     background: transparent;
 }
 
@@ -192,8 +192,8 @@ $dialog_box_shadow: 0 2px 6px -2px transparentize(black, .8);
 
   @if ($full-panel != 'true') {
     border-radius: 7px;
-    padding: .1em;
-    font-size: .9em;
+    padding: 1px 0;
+    font-size: 90%;
     background: transparentize($bg_color, .3);
   }
 
